--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Jakartarg";
+  src: url("/fonts/jakarta/PlusJakartaSans-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   --background: #fafafa;
   --foreground: #141522;
