--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 
-/* =========================
-   Fonts
-========================= */
+
 @font-face {
   font-family: "Jakarta";
   src: url("/fonts/jakarta/PlusJakartaSans-SemiBold.ttf") format("truetype");
@@ -18,9 +16,7 @@
   src: url("/fonts/jakarta/PlusJakartaSans-Regular.ttf") format("truetype");
 }
 
-/* =========================
-   LIGHT MODE (default)
-========================= */
+
 :root {
   --background: #fafafa;
   --foreground: #141522;
@@ -28,6 +24,7 @@
   --surface-primary: #ffffff;
   --surface-secondary: #f5f5f7;
   --surface-muted: #ebedf7;
+  --bubble-shadow: 0 2px 6px #F0F1FA;
 
   --border-subtle: #e5e7eb;
 
@@ -49,15 +46,14 @@
   --progress-inner: #141522;
 }
 
-/* =========================
-   DARK MODE
-========================= */
+
 .dark {
   --background: #141522;
   --foreground: #f4f5f8;
 
   --surface-primary: #0f0f1a;
   --surface-secondary: #17172a;
+  --bubble-shadow: 0 2px 6px #141522;
 
   --surface-muted: #1c1c34;
 
@@ -113,9 +109,7 @@
   }
 } */
 
-/* =========================
-   Scrollbar
-========================= */
+
 .custom-scrollbar::-webkit-scrollbar {
   width: 6px;
 }
@@ -129,9 +123,7 @@
   border: 2px solid var(--background);
 }
 
-/* =========================
-   Global Layout
-========================= */
+
 html,
 body {
   width: 100%;
